Move blocking call out of constructor and reorder calls for better throw put